# Raspberry-CVT

./: README.md
zenite_ws/: plot_trajetoria.py  trajetoria.csv
zenite_ws/src/acquisition_node/: CMakeLists.txt  package.xml
zenite_ws/src/acquisition_node/include/acquisition_node/: acquisition_node.hpp
zenite_ws/src/acquisition_node/src/: acquisition_node.cpp
zenite_ws/src/calibration_node/: CMakeLists.txt  package.xml
zenite_ws/src/calibration_node/include/calibration_node/: calibration_node.hpp
zenite_ws/src/calibration_node/src/: calibration_node.cpp
zenite_ws/src/camera_control/: CMakeLists.txt  package.xml
zenite_ws/src/camera_control/include/camera_control/: camera_control.hpp
zenite_ws/src/camera_control/src/: camera_control_node.cpp
zenite_ws/src/control_node/: CMakeLists.txt  package.xml
zenite_ws/src/control_node/include/control_node/: control_node.h  control_node.hpp
zenite_ws/src/control_node/launch/: control_node_launch.py
zenite_ws/src/control_node/msg/: CustomData.msg
zenite_ws/src/control_node/src/: control_node.cpp  control_node_exec.cpp
zenite_ws/src/image_adjust_msgs/: package.xml
zenite_ws/src/image_adjust_msgs/msg/: ImageParams.msg
zenite_ws/src/interface_node/: CMakeLists.txt  package.xml
zenite_ws/src/interface_node/include/interface_node/: interface_node.hpp
zenite_ws/src/interface_node/src/: interface_node.cpp
zenite_ws/src/localization_node/: CMakeLists.txt  package.xml
zenite_ws/src/localization_node/include/localization_node/: localization_node.hpp
zenite_ws/src/localization_node/src/: calibration_node.cpp  localization_node.cpp
zenite_ws/src/tracking_node/: CMakeLists.txt  package.xml
zenite_ws/src/tracking_node/src/: localization_node.cpp  tracking.cpp  tracking_node.cpp
zenite_ws/src/transmission_node/: CMakeLists.txt  package.xml
zenite_ws/src/transmission_node/include/transmission_node/: bluetoothAction.h  bluetooth_node.h  transmission_node.hpp
zenite_ws/src/transmission_node/launch/: transmission_node_launch.py
zenite_ws/src/transmission_node/src/: bluetoothAction.cpp  bluetooth_node.cpp  transmission_node.cpp
zenite_ws/src/zenite_calibration_launch/: CMakeLists.txt  package.xml
zenite_ws/src/zenite_interfaces/: CMakeLists.txt  package.xml
zenite_ws/src/zenite_interfaces/srv/: PixelToMeter.srv
zenite_ws/src/zenite_launch/: CMakeLists.txt  package.xml
zenite_ws/src/zenite_launch/launch/: zenite_calibration_launch.py  zenite_launch.py
zenite_ws/src/zenite_utils/: CMakeLists.txt  package.xml
zenite_ws/src/zenite_utils/include/zenite_utils/: pixel_converter.hpp
zenite_ws/src/zenite_utils/src/: pixel_converter.cpp
zenite_ws_ryan/src/camera_control/: CMakeLists.txt  package.xml
zenite_ws_ryan/src/camera_control/include/camera_control/: camera_control.hpp
zenite_ws_ryan/src/camera_control/src/: camera_control_node.cpp
zenite_ws_ryan/src/image_adjust_msgs/: CMakeLists.txt
zenite_ws_ryan/src/interface_node/src/: interface_node.cpp
zenite_ws_ryan/src/zenite_launch/: CMakeLists.txt  package.xml
zenite_ws_ryan/src/zenite_launch/config/: usb_cam.yaml
zenite_ws_ryan/src/zenite_launch/launch/: zenite_launch.py
