<?xml version="1.0"?>
<package format="3">
  <name>acquisition_node</name>
  <version>0.1.0</version>
  <description>Nó de aquisição de imagem</description>
  <maintainer email="voce@exemplo.com">Você</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependências principais -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>  <!-- Alterado para minúsculo -->
  <depend>image_adjust_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
