<?xml version="1.0"?>
<package format="3">
  <name>control_node</name>
  <version>0.1.0</version>
  <description>Nó para definir o movimento do robô</description>
  
  <maintainer email="voce@exemplo.com">Você</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependências de compilação -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependências do pacote -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3</exec_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
