<?xml version="1.0"?>
<package format="3">
  <name>image_adjust_msgs</name>
  <version>0.1.0</version>
  <description>Messages for adjusting image parameters</description>

  <maintainer email="voce@exemplo.com">Você</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>  <!-- Pode estar aqui também -->
  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>  <!-- E aqui -->
  </export>
</package>
