<?xml version="1.0"?>
<package format="3">
  <name>localization_node</name>
  <version>0.1.0</version>
  <description>Localization node for Zenite project using camera and PixelConverter</description>
  <maintainer email="ryan@example.com">Ryan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>zenite_utils</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>zenite_utils</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
