<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zenite_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jerimum@todo.todo">jerimum</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>acquisition_node</exec_depend>
  <exec_depend>interface_node</exec_depend>
  <exec_depend>camera_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
